<resources>
    <string name="app_name">Travel Wish</string>
    <string name="wishlist">Wishlist</string>
    <string name="countries">Explore countries</string>
    <string name="flag">Flag</string>
    <string name="search_by_name">Search country by name</string>
    <string name="search_button">Search</string>

    <string name="explore_no_countries_found">No countries found</string>
    <string name="removedFromWishlist">was removed from Wishlist</string>
    <string name="addedToWishlist">was added to Wishlist</string>

    <string name="country_name">Name</string>
    <string name="region">Region</string>
    <string name="subregion">Subregion</string>
    <string name="native_name">Native name</string>
    <string name="capital">Capital</string>
    <string name="population">Population</string>
    <string name="languages">Languages</string>
    <string name="currencies">Currencies</string>
    <string name="area">Area</string>
    <string name="timezones">Timezones</string>
    <string name="explore">Explore countries</string>
    <string name="clear_button">Clear</string>
</resources>